@@ -14,17 +14,17 @@ module Moneta
 
     # (see Defaults#key?)
     def key?(key, options = {})
-      @adapter.key?(key, options)
+      adapter.key?(key, options)
     end
 
     # (see Defaults#increment)
     def increment(key, amount = 1, options = {})
-      @adapter.increment(key, amount, options)
+      adapter.increment(key, amount, options)
     end
 
     # (see Defaults#close)
     def close
-      @adapter.close
+      adapter.close
     end
 
     # Fetch value with key. Return nil if the key doesn't exist
@@ -38,7 +38,7 @@ module Moneta
     # @return [Object] value
     # @api public
     def load(key, options = {})
-      @adapter.load(key, options)
+      adapter.load(key, options)
     end
 
     # Store value with key
@@ -53,7 +53,7 @@ module Moneta
     # @return value
     # @api public
     def store(key, value, options = {})
-      @adapter.store(key, value, options)
+      adapter.store(key, value, options)
     end
 
     # Delete the key from the store and return the current value
@@ -66,7 +66,7 @@ module Moneta
     # @option options Other options as defined by the adapters or middleware
     # @api public
     def delete(key, options = {})
-      @adapter.delete(key, options)
+      adapter.delete(key, options)
     end
 
     # Clear all keys in this store
@@ -75,7 +75,7 @@ module Moneta
     # @return [void]
     # @api public
     def clear(options = {})
-      @adapter.clear(options)
+      adapter.clear(options)
       self
     end
   end
