@@ -5,6 +5,7 @@ master
 * Adapters::TDB added
 * Adapters::Daybreak added
 * Adapters::Mongo - Expiration and increment support added
+* Pool proxy added
 
 0.7.3
 
